--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "jeremydurden.dev",
+  "homepage": "http://jeremydurden.dev/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
